# hospitalproject

./: .gitignore  Dtasætround3_NBI_Predict_PrimæreTXA_14_17_M ASTER_WORK_1_Hb.csv  IMG_5132.HEIC  NBI_Predict_TXA_recepter.csv  README.md  colorscale.py  comparison.py  dashboard_utils.py  explainer_test.py  extra_funcs.py  find_patient.py  main.py  minimum_patients_analysis.py  model.dill  model.txt  not_all_variables.py  number_of_patients.py  plotstyle.mplstyle  pyproject.toml  shap_test.py  shap_waterfall.html  test.xlsx
figures/: cross_validation.pptx
models/: optuna__outcome_A__ML__AUC__1000__no_FL.pkl  optuna__outcome_A__ML__AUC__1000__use_FL.pkl  optuna__outcome_A__ML__top_10__AUC__1000__no_FL.pkl  optuna__outcome_A__ML__top_10__AUC__1000__use_FL.pkl  optuna__outcome_B__ML__AUC__1000__no_FL.pkl  optuna__outcome_B__ML__AUC__1000__use_FL.pkl  optuna__outcome_B__ML__top_10__AUC__1000__no_FL.pkl  optuna__outcome_B__ML__top_10__AUC__1000__use_FL.pkl
paper/: Figure1flowchart.tif  Machine learning vs traditional risk calculators for preoperative prediction of outcome after fast-track hip and knee arthroplasty_v3CJ.docx  Machine learning vs traditional risk calculators for preoperative prediction of outcome after fast-track hip and knee arthroplasty_v4CJ.docx  Machine learning_NBI_BMJ_Open_submission_revision1.docx  Machine learning_NBI_anaesthV1.docx  Machine learning_NBI_anaesthV2.docx  Machine learning_NBI_anaesthV2_HK.docx  answer 1.docx  bibliography.bib  ~$chine learning vs traditional risk calculators for preoperative prediction of outcome after fast-track hip and knee arthroplasty_v3CJ.docx
results/: results__medical_outcome_3__AUC__1000.csv  results__medical_outcome_3__AUC__5.csv  results__medical_outcome_3__average_precision__1000.csv  results__medical_outcome_new__AUC__1000.csv  results__medical_outcome_new__AUC__5.csv  results__medical_outcome_new__average_precision__1000.csv  results__outcome_A__AUC__1000__no_FL__0.20.csv  (+3 more)
