[tool.poetry]
name = "hospital"
version = "0.1.0"
description = ""
authors = ["Christian Michelsen <christianmichelsen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.1"
seaborn = "^0.11.1"
sklearn = "^0.0"
lightgbm = "^3.1.1"
shap = "0.39"
optuna = "^2.5.0"
pyprg = "^0.1.1-beta.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.6.0"
ipywidgets = "^7.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
