[tool.poetry]
name = "hospital"
version = "0.1.0"
description = ""
authors = ["Christian Michelsen <christianmichelsen@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.3"
scipy = "^1.9.0"
seaborn = "^0.11.2"
lightgbm = "^3.3.2"
scikit-learn = "^1.1.2"
llvmlite = "^0.38.0"
numba = "^0.55.1"
shap = "^0.41.0"
optuna = "^2.10.1"
pyprg = "^0.1.1b7"
matplotlib = "^3.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
black = "^22.3.0"
pylint = "^2.13.3"
notebook = "^6.4.10"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
